<resources>
    <string name="app_name">Taller_ListView</string>
    <string name="titulo_opciones">Opciones</string>
    <string name="mensaje_error">Complete el campo</string>
  //lista de opciones general
    <string name="areas">Areas</string>
    <string name="volumenes">Volumenes</string>
    <string name="operaciones_realizadas">Operaciones Realizadas</string>
    <string-array name="opciones">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/operaciones_realizadas</item>
    </string-array>

    //Lista de opciones para Areas
    <string name="cuadrado">Area Cuadrado</string>
    <string name="rectangulo">Area Rectangulo</string>
    <string name="triangulo">Area Triangulo</string>
    <string name="circulo">Area Circulo</string>
    <string-array name="opciones_area">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>

    //Lista de opciones para volumenes
    <string name="esfera">Volumen Esfera</string>
    <string name="cilindro">Volumen Cilindro</string>
    <string name="cono">Volumen Cono</string>
    <string name="cubo">Volumen Cubo</string>
    <string name="valor_lado">Lado: </string>
    <string name="ingrese_valor">Ingrese aqui el valor</string>
    <string name="calcular">calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="valor_base">Base: </string>
    <string name="valor_altura">Altura: </string>
    <string name="valor_radio">Radio: </string>
    <string name="nro">Nro.</string>
    <string name="operacion">operacion</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>
    <string name="valor_resultado">El Resultado es:</string>
    <string-array name="opciones_volumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>






</resources>
