<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CilindroActivity">

    <TextView
        android:id="@+id/txtCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cilindro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblAlturaCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_altura" />

    <EditText
        android:id="@+id/txtAlturaCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_valor"
        android:inputType="number" />

    <TextView
        android:id="@+id/lblRadioCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_radio" />

    <EditText
        android:id="@+id/txtRadioCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_valor"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalCilindro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnLimpCilindro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Limpiar"
            android:text="@string/limpiar" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResCilindro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>