<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrianguloActivity">

    <TextView
        android:id="@+id/txtTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/triangulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblBaseTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_base" />

    <EditText
        android:id="@+id/txtBaseTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_valor"
        android:inputType="number" />

    <TextView
        android:id="@+id/lblAlturaTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_altura" />

    <EditText
        android:id="@+id/txtAlturaTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_valor"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnLimpTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Limpiar"
            android:text="@string/limpiar" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResTriangulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>